name: paxos-blog
version: 0.0.1
cabal-version: >= 1.18
author: Jared G. Roesch and Tristan M. Konolige
build-type: Simple

executable paxos-blog
  default-language: Haskell2010
  hs-source-dirs: src
  main-is:
    Main.hs  
  build-depends:
    base >= 4 && <= 5,
    parsec >= 3,
    text >= 0.11 && <= 0.12,
    mtl >= 2.1,
    transformers >= 0.3.0.0
