name: paxos-blog
version: 0.0.1
cabal-version: >= 1.18
author: Jared G. Roesch and Tristan M. Konolige
build-type: Simple

executable paxos-blog
  default-language: Haskell2010
  hs-source-dirs: src
  main-is:
    Main.hs  
  build-depends:
    array,
    base >= 4 && <= 5,
    bytestring >= 0.10.0.2,
    cereal >= 0.4.0.0,
    containers >= 0.5.0.0,
    parsec >= 3,
    text >= 0.11 && <= 0.12,
    mtl >= 2.1,
    transformers >= 0.3.0.0,
    lens >= 3.10,
    free >= 4,
    haskeline >= 0.7.0.3,
    hslogger >= 1.2.3,
    network >= 2.4.2.0,
    either >= 4.0,
    vector

test-suite test-paxos
  type:           exitcode-stdio-1.0
  hs-source-dirs: src,test
  main-is:        TestMain.hs
  build-depends:
    array,
    base >= 4 && <= 5,
    bytestring >= 0.10.0.2,
    cereal >= 0.4.0.0,
    containers >= 0.5.0.0,
    parsec >= 3,
    text >= 0.11 && <= 0.12,
    mtl >= 2.1,
    transformers >= 0.3.0.0,
    lens >= 3.10,
    free >= 4,
    haskeline >= 0.7.0.3,
    hslogger >= 1.2.3,
    network >= 2.4.2.0,
    either >= 4.0,
    test-framework, 
    test-framework-quickcheck2,
    test-framework-hunit,
    test-framework-th,
    HUnit
